refactor: get rid of excessive info in .env + move all enviromental vars to single file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,8 @@
 NODE_ENV=production
 JWT_SECRET=keyexample
-DB_ADDRESS="mongodb://127.0.0.1:27017/mestodb"
+DB_ADDRESS=mongodb://127.0.0.1:27017/mestodb
+
+DEPLOY_USER=student
+DEPLOY_HOST=84.201.170.211
+DEPLOY_PATH=/home/student/nodejs-pm2-deploy
+DEPLOY_REPO=https://github.com/Estisui/nodejs-pm2-deploy.git
