--- a/frontend/.env.deploy.example
+++ b/frontend/.env.deploy.example
@@ -1,3 +1,4 @@
 DEPLOY_USER=student
 DEPLOY_HOST=84.201.170.211
 DEPLOY_PATH=/home/student/nodejs-pm2-deploy
+DEPLOY_REPO=https://github.com/Estisui/nodejs-pm2-deploy.git
